# mw5-remap

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HOTASMappings.Remap  LICENSE  MW5-Controls.html  README.md  build.rs  installer.iss  tasks.md
.cargo/: config.toml
.claude/skills/add-joystick/: SKILL.md
.claude/skills/fetch-joystick-diagram/: SKILL.md
.claude/skills/improve-ui/: SKILL.md
src/: app.rs  cli.rs  community.rs  devices.rs  diagram.rs  dinput.rs  export.rs  hidhide.rs  input.rs  main.rs  mcp.rs  profiles.rs  sys.rs  update.rs  visual.rs  vjoy.rs  vjoy_map.rs
src/app/: community_ui.rs  detect.rs  export_ui.rs  mod.rs  panels.rs  tabs.rs  theme.rs  toolbar.rs  vjoy_style.rs  vjoy_ui.rs  widgets.rs
src/games/: ac7.rs  mod.rs  mw5.rs  sc.rs
src/games/mw5/: data.rs  hotas.rs  mod.rs  parse.rs
src/visual/: axes_state.rs  devices_markers.rs  draw.rs  layout.rs  mod.rs  order.rs  panel.rs  resolve.rs
