[package]
name = "mw5-remap"
version = "0.5.5"
edition = "2021"
description = "Visual joystick binding editor for MechWarrior 5, Ace Combat 7, and Star Citizen"

[[bin]]
name = "MW5-Remap"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
opt-level = 2
strip = true
panic = "abort"   # no unwinder => drops the external libunwind.dll dependency
